@@ -6,6 +6,7 @@
   * Delong's CI reversed in ROC curves with direction=">"
   * Delong's CI AUC returned values > 1 or < 0 in some rare cases
   * Minor fixes in documentation of 'direction' and in the output of 'plot.roc'
+  * Added 'logcondens' and 'logcondens.smooth' smoothing methods.
 
 1.4.4 (2011-08-09)
   * Fixed alternative for one-tailed tests
